--- a/prism_project/templates/pages/base.html
+++ b/prism_project/templates/pages/base.html
@@ -7,9 +7,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         {% if title %}
-            <title>PRISM Pages - {{ title }}</title>
+            <title>PRISM - {{ title }}</title>
         {% else %}
-            <title> PRISM Pages</title>
+            <title>PRISM Pages</title>
         {% endif %}
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
