--- a/prism_project/templates/pages/home.html
+++ b/prism_project/templates/pages/home.html
@@ -1,6 +1,8 @@
-{% extends pages/base.html"%}
+{% extends "pages/base.html" %}
 
 {% block content %}
+    <h1> Pages Home </h1>
+    <h1> template in parent </h1>
     <!--Django loop-->
     {% for page in pages %}
         <h1>{{ page.title }}</h1>
