--- a/prism_project/templates/pages/home.html
+++ b/prism_project/templates/pages/home.html
@@ -6,7 +6,7 @@
     <!--Django loop-->
     {% for page in pages %}
         <h1>{{ page.title }}</h1>
-        <p>Updated by {{ page.last_author }} on {{ page.last_modified }}</p>
+        <p>By {{ page.last_author }} on {{ page.date_last_modified }}</p>
         <p>{{ page.content }}</p>
     {% endfor %}
 {% endblock content%}
