Add todo to fix css loading

--- a/prism_project/templates/updates/base.html
+++ b/prism_project/templates/updates/base.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <!-- Grab CSS relevant to app -->
+        <!-- Grab CSS relevant to app --> <!--TODO fix css loading for /updates/-->
         <link rel="stylesheet" type='text/css' href="{% static 'updates/updates_main.css' %}">
 
         <!-- Set page title according to page -->
