Updated name of homepage

--- a/prism_project/templates/pages/base.html
+++ b/prism_project/templates/pages/base.html
@@ -13,7 +13,7 @@
         {% if title %}
             <title>PRISM - {{ title }}</title>
         {% else %}
-            <title>PRISM Pages</title>
+            <title>PRISM Pages Directory</title>
         {% endif %}
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
