Moved static to project/statics, fixed css

--- a/prism_project/templates/pages/base.html
+++ b/prism_project/templates/pages/base.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
         <!-- Grab CSS relevant to app -->
-        <link rel="stylesheet" type='text/css' href="{% static 'pages/pages_main.css' %}">
+        <link rel="stylesheet" type='text/css' href="{% static 'css/main.css' %}">
 
         <!-- Set page title according to page -->
         {% if title %}
