--- a/prism_project/templates/updates/base.html
+++ b/prism_project/templates/updates/base.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
         <!-- Grab CSS relevant to app --> <!--TODO fix css loading for /updates/-->
-        <link rel="stylesheet" type='text/css' href="{% static 'updates/updates_main.css' %}">
+        <link rel="stylesheet" type='text/css' href="{% static 'css/main.css' %}">
 
         <!-- Set page title according to page -->
         {% if title %}
