--- a/prism_project/templates/pages/base.html
+++ b/prism_project/templates/pages/base.html
@@ -32,8 +32,8 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarToggle">
                         <div class="navbar-nav mr-auto">
-                            <a class="nav-item nav-link" href="#">Pages</a>
-                            <a class="nav-item nav-link" href="#">About</a>
+                            <a class="nav-item nav-link" href="{% url 'pages-index' %}">Pages</a>
+                            <a class="nav-item nav-link" href="{% url 'pages-about' %}">About</a>
                         </div>
                         <!-- Navbar Right Side -->
                         <div class="navbar-nav">
