--- a/prism_project/templates/pages/about.html
+++ b/prism_project/templates/pages/about.html
@@ -1,5 +1,5 @@
-{% extends "pages/base.html"%}
+{% extends "pages/pages-base.html"%}
 
-{% block content %}
+{% block 'page-content' %}
     <h1>about page</h1>
-{% endblock content%}
+{% endblock 'page-content' %}
