--- a/prism_project/templates/updates/home.html
+++ b/prism_project/templates/updates/home.html
@@ -1,6 +1,6 @@
-{% extends "updates/base.html" %}
+{% extends "updates/updates-base.html" %}
 
-{% block content %}
-    <h1> Updates Home</h1>
+{% block 'page-content' %}
+    <h1> Updates Directory</h1>
     <p> Work In Process </p>
-{% endblock content%}
+{% endblock 'page-content' %}
