--- a/prism_project/templates/registration/login.html
+++ b/prism_project/templates/registration/login.html
@@ -5,7 +5,7 @@
 {% block 'page-content' %}
 
     {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
+        <p>Your email and password didn't match. Please try again.</p>
     {% endif %}
 
     {% if next %}
@@ -34,6 +34,10 @@
         <input type="hidden" name="next" value="{{ next }}">
     </form>
 
-    <p><a href="{% url 'password_reset' %}">Forgot password?</a></p>
+    <br>
+    <p>
+        <a href="{% url 'signup' %}">Create account</a><br>
+        <a href="{% url 'password_reset' %}">Forgot password?</a>
+    </p>
 
 {% endblock 'page-content' %}
