--- a/prism_project/templates/users/profile.html
+++ b/prism_project/templates/users/profile.html
@@ -4,12 +4,11 @@
 
 {% block 'page-content' %}
     {% if user.is_authenticated %}
-        <p>User: {{ user.get_full_name }} logged in.</p>
-        <p><a href="{% url 'core-index' %}">homepage</a></p>
-        <p><a href="{% url 'logout' %}">logout</a></p>
-
+        <p>{{ user.get_full_name }} logged in.</p>
+        <p><a href="{% url 'core-index' %}">Return home</a></p>
+        <p><a href="{% url 'logout' %}">Logout</a></p>
     {% else %}
-        <a href="{% url 'login' %}">login</a> |
-        <a href="{% url 'signup' %}">signup</a>
+        <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'signup' %}">Signup</a>
     {% endif %}
 {% endblock 'page-content' %}
