--- a/prism_project/templates/pages/index.html
+++ b/prism_project/templates/pages/index.html
@@ -6,6 +6,6 @@
     <h1>Page Directory<h1>
     {% for page in pages %}
         <h3>{{ page.title }}</h3> Updated last by {{ page.author }} on {{ page.date_modified }}
-        <p>{{ page.formatted_markdown|safe }}</p>
+        <p>{{ page.desc }}</p>
     {% endfor %}
 {% endblock 'page-content' %}
