--- a/prism_project/templates/pages/pages-base.html
+++ b/prism_project/templates/pages/pages-base.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Prism - Page Directory{% endblock title %}
+{% block title %}PRISM - Page Directory{% endblock title %}
 
 {% block description %}A list of all currently available pages.{% endblock description %}
 
