--- a/prism_project/templates/users/profile.html
+++ b/prism_project/templates/users/profile.html
@@ -3,12 +3,25 @@
 {% block title %}User Profile - {{ user.get_id }}{% endblock title %}
 
 {% block 'page-content' %}
-    {% if user.is_authenticated %}
-        <p>{{ user.get_full_name }} logged in.</p>
-        <p><a href="{% url 'core-index' %}">Return home</a></p>
-        <p><a href="{% url 'logout' %}">Logout</a></p>
-    {% else %}
-        <a href="{% url 'login' %}">Login</a>
-        <a href="{% url 'signup' %}">Signup</a>
+    {% if user.is_authenticated and user.is_staff or user.is_authenticated and user.is_superuser%}
+        <p>
+            <a href="{% url 'admin:index' %}">Admin Panel</a><br>
+        </p>
     {% endif %}
+
+    {% if user.is_authenticated %}
+        <p>{{ user.get_full_name }} is currently logged in.</p>
+
+        
+        <p>
+            <a href="#">Edit user details</a><br>
+            <a href="{% url 'logout' %}">Logout</a><br>
+        </p>
+
+    {% else %}
+        <a href="{% url 'login' %}">Login</a><br>
+        <a href="{% url 'signup' %}">Signup</a><br>
+    {% endif %}
+
+    <a href="{% url 'core-index' %}">Return home</a>
 {% endblock 'page-content' %}
