--- a/prism_project/templates/users/users-base.html
+++ b/prism_project/templates/users/users-base.html
@@ -2,14 +2,14 @@
 
 {% load static %}
 
-{% block title %}BlockShare - Users Crashpage{% endblock title %}
+{% block title %}Users Crashpage{% endblock title %}
 
 {% block description %}{% endblock description %}
 
 {% block stylesheet %}{% static 'css/users.css' %}{% endblock stylesheet%}
 
 {% block 'app-content' %}
-    <body>        
+    <body>
         <!-- Page Content -->
         <div class="row">
             <!-- Main Content -->
