--- a/prism_project/templates/pages/index.html
+++ b/prism_project/templates/pages/index.html
@@ -3,8 +3,8 @@
 {% block 'page-content' %}
     <h1>Page Directory<h1>
     {% for page in pages %}
-        <h3><a href="{{ page.id }}/{{ page.slug_as_text }}">{{ page.title }}</a></h3>
-        Updated last by {{ page.author }} on {{ page.date_modified }}
+        <h3 style="display:inline"><a href="{{ page.title }}">{{ page.pretty_title }}</a></h3> | Last Updated: {{ page.date_modified }}
         <p>{{ page.desc }}</p>
+        <hr style="border-color:#343a40">
     {% endfor %}
 {% endblock 'page-content' %}
