--- a/prism_project/templates/pages/page-view.html
+++ b/prism_project/templates/pages/page-view.html
@@ -3,8 +3,8 @@
 {% block title %}PRISM - {{ page.title }}{% endblock title %}
 
 {% block 'page-content' %}
-    <h3>{{ page.title }}</h3>
-    <p>Updated last by {{ page.author }} on {{ page.date_modified }}</p>
+    <h3>{{ page.pretty_title }}</h3>
+    
     <!-- Displays content parsing markdown into html. Makes writing pages easier for end users. -->
     <p>{{ page.formatted_markdown|safe }}</p>
 {% endblock 'page-content' %}
