--- a/prism_project/templates/base.html
+++ b/prism_project/templates/base.html
@@ -37,7 +37,7 @@
                     <div class="collapse navbar-collapse" id="navbarToggle">
                         <div class="navbar-nav mr-auto">
                             <a class="nav-item nav-link" href="{% url 'pages-index' %}">Pages</a>
-                            <a class="nav-item nav-link" href="{% url 'pages-about' %}">About</a>
+                            <a class="nav-item nav-link" href="/pages/About">About</a>
                         </div>
                         <!-- Navbar Right Side -->
                         <div class="navbar-nav" style="white-space:nowrap">
