--- a/prism_project/templates/users/profile.html
+++ b/prism_project/templates/users/profile.html
@@ -4,14 +4,15 @@
 {% block title %}User Profile - {{ user.get_id }}{% endblock title %}
 
 {% block 'page-content' %}
-    {% if user.is_authenticated and user.is_staff or user.is_authenticated and user.is_superuser%}
-        <p>
-            <a href="{% url 'admin:index' %}">Admin Panel</a><br>
-        </p>
-    {% endif %}
 
     {% if user.is_authenticated %}
         <p>{{ user.get_full_name }} is currently logged in.</p>
+
+    {% if user.is_staff or user.is_superuser%}
+        <p class="btn btn-eBlue">
+            <a href="{% url 'admin:index' %}">Admin Panel</a><br>
+        </p>
+    {% endif %}
 
         <p>
             <a href="#">Edit user details</a><br>
@@ -23,5 +24,5 @@
         <a href="{% url 'signup' %}">Signup</a><br>
     {% endif %}
 
-    <a href="{% url 'home' %}">Return home</a>
+    <p><a href="{% url 'home' %}">Return home</a></p>
 {% endblock 'page-content' %}
