--- a/prism_project/templates/pages/pages-base.html
+++ b/prism_project/templates/pages/pages-base.html
@@ -7,14 +7,10 @@
 
 {% block description %}A list of all currently available pages.{% endblock description %}
 
-{% block 'app-content' %}
-    <body>        
-        <!-- Page Content -->
-        <div class="row">
-            <!-- Main Content -->
-            <div class="col-md-8">
+<div class="row">
+    <div class="col-12">
+        {% block 'app-content' %}
             {% block 'page-content' %}{% endblock 'page-content' %}
-            </div>
-        </div>
-    </body>
-{% endblock 'app-content' %}
+        {% endblock 'app-content' %}
+    </div>
+</div>
