--- a/prism_project/templates/updates/updates-base.html
+++ b/prism_project/templates/updates/updates-base.html
@@ -1,20 +1,14 @@
 <!-- Django code to add this html to ../base.html -->
 {% extends "base.html" %}
 
-{% load static %}
-
 {% block title %} PRISM - Updates Directory {% endblock title %}
 
 {% block description %}Directory of all currently available updates of days past.{% endblock description%}
 
-{% block 'app-content' %}
-    <body>        
-        <!-- Page Content -->
-        <div class="row">
-            <!-- Main Content -->
-            <div class="col-md-8">
+<div class="row">
+    <div class="col-12">
+        {% block 'app-content' %}
             {% block 'update-content' %}{% endblock 'update-content' %}
-            </div>
-        </div>
-    </body>
-{% endblock 'app-content' %}
+        {% endblock 'app-content' %}
+    </div>
+</div>
