Dynamic image on index

--- a/prism_project/static/css/main.css
+++ b/prism_project/static/css/main.css
@@ -43,6 +43,10 @@
             word-wrap: break-word;
         }
 
+        .row {
+            margin-bottom: 2em;
+        }
+
     /* ------------------------------------------------------
         1.2. Color scheme
     ------------------------------------------------------ */
@@ -213,6 +217,13 @@
     /* ------------------------------------------------------
         3.1. Core - Homepage
     ------------------------------------------------------ */
+
+    #index-img {
+        background: center no-repeat url("../img/prism_logo_transparent.png");
+        background-size: contain;
+        
+        width: 100%;
+    }
 
     /* ------------------------------------------------------
         3.2. Pages
