--- a/prism_project/templates/base.html
+++ b/prism_project/templates/base.html
@@ -76,5 +76,7 @@
                 </div>
             {% endblock 'app-content' %}
         </main>
+
+        {% block 'js' %}{% endblock 'js' %}
     </body>
 </html>
