--- a/prism_project/templates/core/index.html
+++ b/prism_project/templates/core/index.html
@@ -1,6 +1,8 @@
 <!-- Django code to add this html to core-base.html -->
 {% extends "core/core-base.html" %}
 
+{% load static %}
+
 {% block title %} PRISM {% endblock title %}
 
 {% block 'page-content' %}
@@ -9,11 +11,23 @@
             <h1> Welcome to PRISM! </h1>
             <p> This should be the first page people see when visiting our site, so it should look nice! </p>
             <p> Each django 'app' uses a different base.html file, so each can be re-styled to fit their own needs. CSS files are also sepparated by app, so each can look drastically different if need be! </p>
+
+            <div id="newest-update">
+                <h4>{{ update.pretty_title }}</h4>
+
+                <!-- Render markdown into html. Update from admin controls. -->
+                <p>{{ update.formatted_markdown|safe }}</p>
+            </div>
         </div> <!-- End column -->
 
         <!-- Hide sidenav on medium or smaller screens -->
-        <div class="col-md-4 d-none d-lg-block">
-            <ul id="sidenav" class="list-group">
+        <div class="col-md-4">
+            <div id="index-img" class="d-none d-md-block"></div>
+            <div id="door-status-indicator">
+                <p>PRISM is located in 'SoHo', room 335 of the Cohen University Center. Come stop on by!</p>
+                <p>SoHo is currently <span id="door-status">{{ door }}</span></p>
+            </div>
+            <ul id="sidenav" class="list-group d-none d-md-block">
                 <li class="list-group-item">
                     <a href="/">Home</a>
                 </li>
@@ -25,15 +39,11 @@
                 </li>
             </ul>
         </div>
+
     </div> <!-- End row -->
 
-    <div class='row'>
-        <!-- Column spans whole row -->
-        <div class="col-12">
-            <h4>{{ update.pretty_title }}</h4>
-
-            <!-- Render markdown into html. Update from admin controls. -->
-            <p>{{ update.formatted_markdown|safe }}</p>
-        </div>
-    </div>
 {% endblock 'page-content' %}
+
+{% block 'js' %}
+    <script src="{% static 'js/img-adjust.js' %}"></script
+{% endblock 'js' %}
