Basic implementation of door status box

--- a/prism_project/templates/core/index.html
+++ b/prism_project/templates/core/index.html
@@ -48,5 +48,6 @@
 {% endblock 'page-content' %}
 
 {% block 'js' %}
-    <script src="{% static 'js/img-adjust.js' %}"></script
+    <script src="{% static 'js/img-adjust.js' %}"></script>
+    <script src="{% static 'js/door-box.js' %}"></script>
 {% endblock 'js' %}
