--- a/prism_project/static/css/main.css
+++ b/prism_project/static/css/main.css
@@ -220,9 +220,18 @@
 
     #index-img {
         background: center no-repeat url("../img/prism_logo_transparent.png");
-        background-size: contain;
+        background-size: 90% 90%;
         
         width: 100%;
+    }
+
+    #door-status-indicator {
+        padding: 1em;
+        padding-bottom: 0em;
+        border: 0.5px solid var(--eBlue);
+        border-radius: 10px;
+
+        margin-bottom: 1em;
     }
 
     /* ------------------------------------------------------
