Updated index.html for production-relevant text

--- a/prism_project/templates/core/index.html
+++ b/prism_project/templates/core/index.html
@@ -10,8 +10,13 @@
         <div class="col-md-8">
             <div id="welcome">
                 <h1> Welcome to PRISM! </h1>
-                <p> This should be the first page people see when visiting our site, so it should look nice! </p>
-                <p> Each django 'app' uses a different base.html file, so each can be re-styled to fit their own needs. CSS files are also sepparated by app, so each can look drastically different if need be! </p>
+                <p>
+                    PRISM is a social and activist organization at Carnegie Mellon University for those of all genders and orientations. We provide a safe space for anyone with an open mind to find new friends, talk about issues, raise awareness, and relax between classes.
+
+                    Check the calendar below for our upcoming events and initiatives! Or take a look at our support groups if you are interested in joining a support group.
+                    
+                    Suggestions / Complaints about the website? Contact our <a href="/pages/contact"></a>webmaster!</a>
+                </p>
             </div> <!-- End welcome -->
 
             <hr> <!-- Divide content -->
