--- a/prism_project/templates/core/index.html
+++ b/prism_project/templates/core/index.html
@@ -57,7 +57,7 @@
     <div class="row">
         <div class="col-md-12">
             <!-- PRISM Activities Calendar -->
-            <iframe src="https://calendar.google.com/calendar/embed?wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=cHJpc21AYW5kcmV3LmNtdS5lZHU&amp;color=%23EF6C00&amp;title=PRISM%20Events&amp;mode=WEEK&amp;showPrint=0&amp;showCalendars=0&amp;showTz=1&amp;showNav=1" width="100%" height="65vh" scrolling="no"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=cHJpc21AYW5kcmV3LmNtdS5lZHU&amp;color=%23EF6C00&amp;title=PRISM%20Events&amp;mode=WEEK&amp;showPrint=0&amp;showCalendars=0&amp;showTz=1&amp;showNav=1" width="100%" height="650px" scrolling="no"></iframe>
         </div> <!-- End column -->
     </div> <!-- End row -->
 
