--- a/prism_project/templates/base.html
+++ b/prism_project/templates/base.html
@@ -9,7 +9,8 @@
         <!-- Set page title according to page. PRISM by default, or as set by the title block -->
         <title>{% block title %} PRISM {% endblock title %}</title>
         <meta name="description" content="{% block description %} PRISM is CMU's student-led LGBTQ+ organization. We're based in room 335 of the Cohon University Center. Come stop on by!{% endblock description%}">
-        
+        <meta name="keywords" content="CMU, Carnegie Mellon University, PRISM, ALLIES, LGBTQ, LGBTQ+, LGBT, Queer, GSA">
+
         <!-- Resize width to device width. Fixes many issues with screen sizes. -->
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -19,7 +20,6 @@
 
         <!-- Bootstrap CSS -->
        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        
 
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -73,6 +73,7 @@
                 <div id="default-content">
                     <!-- This will only show if a page's content block fails to load. Effectively a 404 div. -->
                     <h1>Error loading page content. Please contact our site webadmin.</h1>
+                    <a href="https://prism.andrew.cmu.edu">Return to Homepage</a>
                 </div>
             {% endblock 'app-content' %}
         </main>
