--- a/prism_project/templates/pages/page-view.html
+++ b/prism_project/templates/pages/page-view.html
@@ -1,7 +1,7 @@
 <!-- Django code to add this html to pages-base.html -->
 {% extends "pages/pages-base.html" %}
 
-{% block title %}PRISM - {{ page.title }}{% endblock title %}
+{% block title %}PRISM - {{ page.pretty_title }}{% endblock title %}
 
 {% block 'page-content' %}
     <h3>{{ page.pretty_title }}</h3>
