--- a/prism_project/templates/updates/updates-view.html
+++ b/prism_project/templates/updates/updates-view.html
@@ -1,7 +1,7 @@
 <!-- Django code to add this html to updates-base.html -->
 {% extends "updates/updates-base.html" %}
 
-{% block title %}PRISM - {{ update.title }}{% endblock title %}
+{% block title %}PRISM - {{ update.pretty_title }}{% endblock title %}
 
 {% block 'update-content' %}
     <h3>{{ update.pretty_title }}</h3>
