--- a/prism_project/templates/core/index.html
+++ b/prism_project/templates/core/index.html
@@ -57,8 +57,8 @@
     <div class="row">
         <div class="col-lg-8 d-none d-md-block">
             <!-- PRISM Weekly Calendar -->
-            <iframe id="weekly-cal" src="https://calendar.google.com/calendar/embed?wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=cHJpc21AYW5kcmV3LmNtdS5lZHU&amp;color=%23EF6C00&amp;title=PRISM%20Events&amp;mode=WEEK&amp;showPrint=0&amp;showCalendars=0&amp;showTz=1&amp;showNav=1"></iframe>
-        </div class="col-lg-4"> <!-- End column -->
+            <iframe id="weekly-cal" src="https://calendar.google.com/calendar/embed?wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=cHJpc21AYW5kcmV3LmNtdS5lZHU&amp;color=%23EF6C00&amp;title=PRISM%20Events&amp;mode=WEEK&amp;showPrint=0&amp;showCalendars=0&amp;showTz=1&amp;showNav=1" style="border-width:0"  width="100%" height="650px" frameborder="0" scrolling="no"></iframe>
+        </div class="col"> <!-- End column -->
             <!-- PRISM Daily Calendar-->
             <iframe id="daily-cal" src="https://calendar.google.com/calendar/embed?wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=cHJpc21AYW5kcmV3LmNtdS5lZHU&amp;color=%23EF6C00&amp;title=PRISM%20Agenda&amp;mode=DAY&amp;showPrint=0&amp;showCalendars=0&amp;showTz=1&amp;showNav=1" style="border-width:0" width="100%" height="650px" frameborder="0" scrolling="no"></iframe>
         <div>
