--- a/prism_project/templates/base.html
+++ b/prism_project/templates/base.html
@@ -8,8 +8,13 @@
 
         <!-- Set page title according to page. PRISM by default, or as set by the title block -->
         <title>{% block title %} PRISM {% endblock title %}</title>
-        <meta name="description" content="{% block description %} PRISM is CMU's student-led LGBTQ+ organization. We're based in room 335 of the Cohon University Center. Come stop on by!{% endblock description%}">
+        <meta name="description" content="{% block description %} PRISM is CMU's student-led LGBTQ+ organization. We're based in room 335 of the Cohon University Center. Come stop on by! {% endblock description%}">
         <meta name="keywords" content="CMU, Carnegie Mellon University, PRISM, ALLIES, LGBTQ, LGBTQ+, LGBT, Queer, GSA">
+
+        <!-- og:meta tags -->
+        <meta property="og:title" content="PRISM">
+        <meta property="og:description" content="PRISM is CMU's student-led LGBTQ+ organization. We're based in room 335 of the Cohon University Center. Come stop on by!">
+        <meta property="og:image" content="{% static 'img/prism_logo_640x640.png' %}">
 
         <!-- Resize width to device width. Fixes many issues with screen sizes. -->
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,7 +24,7 @@
         <link href="{% static 'img/prismdoglowresNOBG.png' %}" rel="apple-touch-icon-precomposed">
 
         <!-- Bootstrap CSS -->
-       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
