--- a/prism_project/static/css/main.css
+++ b/prism_project/static/css/main.css
@@ -48,6 +48,10 @@
             margin-bottom: 2em;
         }
 
+        li {
+            margin: 0.625em;
+        }
+
     /* ------------------------------------------------------
         1.2. Color scheme
     ------------------------------------------------------ */
