Replaced sidenav links

--- a/prism_project/templates/core/index.html
+++ b/prism_project/templates/core/index.html
@@ -38,16 +38,22 @@
             </div>
             <ul id="sidenav" class="list-group d-none d-md-block">
                 <li class="list-group-item">
-                    <a href="/">Home</a>
+                    <a href="/pages/support">Support Groups</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="{% url 'pages-index' %}">Page Directory</a>
+                    <a href="/pages/office-hours">Office Hours</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="/pages/resources">Resources</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="/pages/activism">Activism</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="/pages/social">Social</a>
                 </li>
                 <li class="list-group-item">
                     <a href="{% url 'updates-index' %}">Update History</a>
-                </li>
-                <li class="list-group-item">
-                    <a href="/pages/about">About Us</a>
                 </li>
             </ul> <!-- End sidenav-->
         </div> <!-- End column -->
