Added contact link to topnav

--- a/prism_project/templates/base.html
+++ b/prism_project/templates/base.html
@@ -52,6 +52,7 @@
                         <div class="navbar-nav mr-auto">
                             <a class="nav-item nav-link" href="{% url 'pages-index' %}">Pages</a>
                             <a class="nav-item nav-link" href="/pages/about">About</a>
+                            <a class="nav-item nav-link" href="/pages/contact">Contact</a>
                         </div>
 
                         <!-- Navbar Right Side -->
