Modified li margins for sidenav objects
The previous edit to add more spacing to li objects failed to blacklist .sidenav li objects, causing styles to apply unexpectedly. This change properly resets the margin for .sidenav li objects back to 0.

--- a/prism_project/static/css/main.css
+++ b/prism_project/static/css/main.css
@@ -195,6 +195,10 @@
             width: 48px;
         }
 
+        .sidenav li {
+            margin: 0;
+        }
+
     /* ------------------------------------------------------
         2.2. Header text
     ------------------------------------------------------ */
