Set #sidenav li instead of .sidenav li
sidenav is an id, not a class. oops

--- a/prism_project/static/css/main.css
+++ b/prism_project/static/css/main.css
@@ -195,7 +195,8 @@
             width: 48px;
         }
 
-        .sidenav li {
+        
+        #sidenav li {
             margin: 0;
         }
 
