--- a/prism_project/templates/core/index.html
+++ b/prism_project/templates/core/index.html
@@ -38,10 +38,10 @@
             </div>
             <ul id="sidenav" class="list-group d-none d-md-block">
                 <li class="list-group-item">
-                    <a href="/pages/support">Support Groups</a>
+                    <a href="/pages/affinity">Affinity Groups</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="/pages/office-hours">Office Hours</a>
+                    <a href="/pages/open-hours">Open Hours</a>
                 </li>
                 <li class="list-group-item">
                     <a href="/pages/resources">Resources</a>
