--- a/prism_project/templates/updates/index.html
+++ b/prism_project/templates/updates/index.html
@@ -12,7 +12,9 @@
             {% for update in updates %}
                 <h3 style="display:inline">{{ update.pretty_title }}</h3> | Posted: {{ update.date_modified }}
                 <p>{{ update.formatted_markdown|safe }}</p>
-                <hr style="border-color:#597081">
+                {% if update != finalUpdate %}
+                    <hr style="border-color:#597081">
+                {% endif %}
             {% endfor %}
         {% endblock 'app-content' %}
     </div>
