--- a/prism_project/templates/registration/login.html
+++ b/prism_project/templates/registration/login.html
@@ -21,17 +21,17 @@
         {% csrf_token %}
         <table>
         <tr>
-            <td>{{ form.username.label_tag }}</td>
+            <td>{{ form.username.label_tag }}</td> 
             <td>{{ form.username }}</td>
         </tr>
         <tr>
-            <td>{{ form.password.label_tag }}</td>
+            <td>{{ form.password.label_tag }}</td> 
             <td>{{ form.password }}</td>
         </tr>
         </table>
 
-        <input type="submit" value="login">
-        <input type="hidden" name="next" value="{{ next }}">
+        <input class="user-login-input" type="submit" value="login">
+        <input class="user-login-input" type="hidden" name="next" value="{{ next }}">
     </form>
 
     <br>
