--- a/prism_project/templates/core/index.html
+++ b/prism_project/templates/core/index.html
@@ -35,6 +35,17 @@
             <div id="door-status-indicator">
                 <p>PRISM is located in 'SoHo', room 335 of the Cohen University Center. Come stop on by!</p>
                 <p>SoHo is currently <span id="door-status">{{ door }}</span></p>
+                
+                {% if perms.core.change_door %}
+                    <form method="post" action="/door-toggle">
+                        {% csrf_token %}
+                        {% if door.status == "open" %}
+                            <input type="submit" class="door-status-button btn" value="Close SoHo"/>
+                        {% else %}
+                            <input type="submit" class="door-status-button btn" value="Open SoHo"/>
+                        {% endif %}
+                    </form>
+                {% endif %}
             </div>
             <ul id="sidenav" class="list-group d-none d-md-block">
                 <li class="list-group-item">
@@ -57,7 +68,6 @@
                 </li>
             </ul> <!-- End sidenav-->
         </div> <!-- End column -->
-
     </div> <!-- End row -->
 
     <div class="row">
