--- a/prism_project/templates/pages/pages-base.html
+++ b/prism_project/templates/pages/pages-base.html
@@ -3,9 +3,22 @@
 
 {% load static %}
 
-{% block title %} PRISM - Page Directory {% endblock title %}
+{% block title %}PRISM - Page Directory{% endblock title %}
 
 {% block description %}A list of all currently available pages.{% endblock description %}
+
+{% block 'door-status' %}
+    <form method="post" action="/door-toggle">
+        {% csrf_token %}
+        {% if door.status == "open" %}
+            <input type="submit" class="nav-item btn nav-status open" value="SoHo is {{ door.status }}"/>
+        {% elif door.status == "closed" %}
+            <input type="submit" class="nav-item btn nav-status closed" value="SoHo is {{ door.status }}"/>
+        {% else %}
+            <input type="submit" class="nav-item btn nav-status" value="SoHo is {{ door.status }}"/>
+        {% endif %}
+    </form>
+{% endblock 'door-status' %}
 
 <div class="row">
     <div class="col-12">
