--- a/prism_project/templates/users/signup.html
+++ b/prism_project/templates/users/signup.html
@@ -8,6 +8,6 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit">Sign up</input>
+        <input type="submit" value="Sign Up"/>
     </form>
 {% endblock 'page-content' %}
