Navbar and Sidenav content can now me changed dynamically by admins
Users with the change_page permission can now select which pages show up in the navbar and sidenav menu (independently).

--- a/prism_project/templates/base.html
+++ b/prism_project/templates/base.html
@@ -50,9 +50,11 @@
                     
                     <div class="collapse navbar-collapse" id="navbarToggle">
                         <div class="navbar-nav mr-auto">
-                            <a class="nav-item nav-link" href="{% url 'pages-index' %}">Pages</a>
-                            <a class="nav-item nav-link" href="/pages/about">About</a>
-                            <a class="nav-item nav-link" href="/pages/contact">Contact</a>
+                            {% if page_navbar %}
+                                {% for navbarItem in page_navbar %}
+                                    <a class="nav-item nav-link" href="/pages/{{ navbarItem.title }}">{{ navbarItem.pretty_title }}</a>
+                                {% endfor %}
+                            {% endif %}
                         </div>
 
                         <!-- Navbar Right Side -->
