--- a/prism_project/templates/pages/pages-base.html
+++ b/prism_project/templates/pages/pages-base.html
@@ -8,16 +8,26 @@
 {% block description %}A list of all currently available pages.{% endblock description %}
 
 {% block 'door-status' %}
-    <form method="post" action="/door-toggle">
-        {% csrf_token %}
+    {% if user.is_active and perms.core.change_door %}
+        <form method="post" action="/door-toggle">
+            {% csrf_token %}
+            {% if door.status == "open" %}
+                <input type="submit" class="nav-item btn nav-status open" value="SoHo is {{ door.status }}"/>
+            {% elif door.status == "closed" %}
+                <input type="submit" class="nav-item btn nav-status closed" value="SoHo is {{ door.status }}"/>
+            {% else %}
+                <input type="submit" class="nav-item btn nav-status" value="SoHo is {{ door.status }}"/>
+            {% endif %}
+        </form>
+    {% else %}
         {% if door.status == "open" %}
-            <input type="submit" class="nav-item btn nav-status open" value="SoHo is {{ door.status }}"/>
+            <span class="nav-item btn nav-status open">SoHo is {{ door.status }}</span>
         {% elif door.status == "closed" %}
-            <input type="submit" class="nav-item btn nav-status closed" value="SoHo is {{ door.status }}"/>
+            <span class="nav-item btn nav-status closed">SoHo is {{ door.status }}</span>
         {% else %}
-            <input type="submit" class="nav-item btn nav-status" value="SoHo is {{ door.status }}"/>
+            <span class="nav-item btn nav-status">SoHo is {{ door.status }}</span>
         {% endif %}
-    </form>
+    {% endif %}
 {% endblock 'door-status' %}
 
 <div class="row">
