HTML head description is now set dynamically to page object desctiption

--- a/prism_project/templates/pages/page-view.html
+++ b/prism_project/templates/pages/page-view.html
@@ -3,6 +3,8 @@
 
 {% block title %}PRISM - {{ page.pretty_title }}{% endblock title %}
 
+{% block description %}{{ page.description }}{% endblock description %}
+
 {% block 'page-content' %}
     <h3>{{ page.pretty_title }}</h3>
     
