--- a/prism_project/static-root/css/main.css
+++ b/prism_project/static-root/css/main.css
@@ -20,6 +20,7 @@
         3.4. Users
     4. Footer
     5. Sidenav
+    6. IFrames
 
 ------------------------------------------------------ */
 
@@ -45,6 +46,10 @@
 
         .row {
             margin-bottom: 2em;
+        }
+
+        li {
+            margin: 0.625em;
         }
 
     /* ------------------------------------------------------
@@ -102,7 +107,7 @@
             text-decoration: none;
         }
 
-        input, textarea {
+        .user-login-input {
             background: #fff;
             border: 1px solid rgba(0,0,0,.35);
             font-size: 1em;
@@ -110,7 +115,6 @@
             padding: .35em .5em;
             position: relative;
             display: inline-block;
-            max-width: calc(100% - 6px - .5em);
         }
 
         p {
@@ -170,6 +174,32 @@
             margin-bottom: 1em;
         }
 
+        .nav-status {
+            background-color: rgb(255, 255, 204);
+            margin-right: 1em;
+            border: 0.5px solid var(--eBlue);
+        }
+        
+        .nav-status:hover {
+            background-color: rgb(255, 255, 144);
+        }
+
+        .nav-status.open {
+            background-color: rgb(204, 255, 204);
+        }
+
+        .nav-status.open:hover {
+            background-color: rgb(144, 255, 144);
+        }
+
+        .nav-status.closed {
+            background-color: rgb(255, 204, 204);
+        }
+
+        .nav-status.closed:hover {
+            background-color: rgb(255, 144, 144);
+        }
+
         .bg-eBlue {
         background-color: var(--eBlue);
         }
@@ -188,6 +218,10 @@
 
         #brand-img {
             width: 48px;
+        }
+
+        #sidenav li {
+            margin: 0;
         }
 
     /* ------------------------------------------------------
@@ -234,6 +268,16 @@
             margin-bottom: 1em;
         }
 
+        .door-status-button {
+            margin-bottom: 1em;
+            background-color: #dddddd86;
+        }
+
+        .door-status-button:hover {
+            background-color: #dddddd;
+            border: 0.5px solid var(--eBlue);
+        }
+
     /* ------------------------------------------------------
         3.2. Pages
     ------------------------------------------------------ */
@@ -257,4 +301,21 @@
     #sidenav a {
         border: none;
     }
-    
+
+/* ------------------------------------------------------
+    6. IFrames
+------------------------------------------------------ */
+
+    #weekly-cal {
+        width: 100%;
+        height: 650px;
+        border: 0;
+        overflow: hidden;
+    }
+
+    #daily-cal {
+        width: 100%;
+        height: 650px;
+        border: 0;
+        overflow: hidden;
+    }
