--- a/prism_project/templates/pages/index.html
+++ b/prism_project/templates/pages/index.html
@@ -5,7 +5,7 @@
     <h1>Page Directory<h1>
     {% for page in pages %}
         <h3 style="display:inline"><a href="{{ page.title }}">{{ page.pretty_title }}</a></h3> | Last Updated: {{ page.date_modified }}
-        <p>{{ page.desc }}</p>
+        <p>{{ page.description }}</p>
         {% if page != finalPage %}
             <hr style="border-color:#597081">
         {% endif %}
